Bug #12068
closedFix ambiguous bay/disk labels on Joyent-S10G5
100%
Description
The Joyent S10G5 platform contains two SAS expanders to drive the front and rear disks. The SES implementation on both of these expanders encodes a simplistic element descriptor string for the array device elemnts that uses the format "Slot##". The result is that front disks get labels "Slot00 - Slot23" and the rear disks get labels "Slot00-Slot11" and so you have essentially duplicate labels for the first 12 disks between the front and rear disk backplanes.
This ticket is to cover changes to the ses enumerator to add custom logic to dynamically assign less ambiguous labels to the bay and disk nodes when we detect we're on the Joyent S10G5 platform. The logic will look at the product ID of the SAS expanders (which are different between the front and rear) and create labels "Front Slot 0" through "Front Slot 23" "Rear Slot 0" through "Rear Slot 11" for the front and rear bay/disks nodes, respectively.
This will add the abibuous label issue for the Joyent S10G5 platform as well as the other existing variants of the SMCI 4U36 chassis:
SSG-6047R-E1R36 aka Joyent-Storage-Platform-5001
SSG-6048R-E1CR36L aka Joyent-Storage-Platform-7001
SSG-6049P-E1CR36L aka Joyent S10G5
Updated by Rob Johnston over 2 years ago
Testing¶
I installed these changes on a Joyent S10G5 platform and then dumped the topology with "hwgrok" and verified that the values of the label property were correct (see output below). I also verified the expander product_id's on the other SMCI 4u36 variants that are affected by this change match what the code expects.
# ./hwgrok | json "drive-bays" [ { "label": "Front Slot 0", "hc-fmri": "hc:///ses-enclosure=0/bay=0", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ], "disk": { "hc-fmri": "hc:///ses-enclosure=0/bay=0/disk=0", "manufacturer": "SEAGATE", "model": "ST16000NM002G", "serial-number": "ZL203LBW0000C9360L7F", "firmware-revision": "E002", "size-in-bytes": 16000900661248, "speed-in-rpm": 7200, "device-path": "/scsi_vhci/disk@g5000c500adc881d7", "logical-disk": "c0t5000C500ADC881D7d0", "sensors": [ { "name": "temp", "type": "TEMP", "reading": 43, "units": "DEGREES_C" } ], "leds": [] } }, { "label": "Front Slot 1", "hc-fmri": "hc:///ses-enclosure=0/bay=1", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ], "disk": { "hc-fmri": "hc:///ses-enclosure=0/bay=1/disk=0", "manufacturer": "SEAGATE", "model": "ST16000NM002G", "serial-number": "ZL203LEE0000C9360L9Z", "firmware-revision": "E002", "size-in-bytes": 16000900661248, "speed-in-rpm": 7200, "device-path": "/scsi_vhci/disk@g5000c500adc88587", "logical-disk": "c0t5000C500ADC88587d0", "sensors": [ { "name": "temp", "type": "TEMP", "reading": 46, "units": "DEGREES_C" } ], "leds": [] } }, { "label": "Front Slot 2", "hc-fmri": "hc:///ses-enclosure=0/bay=2", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ], "disk": { "hc-fmri": "hc:///ses-enclosure=0/bay=2/disk=0", "manufacturer": "SEAGATE", "model": "ST16000NM002G", "serial-number": "ZL2038DR0000C9360LEP", "firmware-revision": "E002", "size-in-bytes": 16000900661248, "speed-in-rpm": 7200, "device-path": "/scsi_vhci/disk@g5000c500adc08f4b", "logical-disk": "c0t5000C500ADC08F4Bd0", "sensors": [ { "name": "temp", "type": "TEMP", "reading": 44, "units": "DEGREES_C" } ], "leds": [] } }, { "label": "Front Slot 3", "hc-fmri": "hc:///ses-enclosure=0/bay=3", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ], "disk": { "hc-fmri": "hc:///ses-enclosure=0/bay=3/disk=0", "manufacturer": "SEAGATE", "model": "ST16000NM002G", "serial-number": "ZL203L3G0000C9360NS6", "firmware-revision": "E002", "size-in-bytes": 16000900661248, "speed-in-rpm": 7200, "device-path": "/scsi_vhci/disk@g5000c500adc8bd7f", "logical-disk": "c0t5000C500ADC8BD7Fd0", "sensors": [ { "name": "temp", "type": "TEMP", "reading": 42, "units": "DEGREES_C" } ], "leds": [] } }, { "label": "Front Slot 4", "hc-fmri": "hc:///ses-enclosure=0/bay=4", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ], "disk": { "hc-fmri": "hc:///ses-enclosure=0/bay=4/disk=0", "manufacturer": "SEAGATE", "model": "ST16000NM002G", "serial-number": "ZL203CWP0000C9363VTB", "firmware-revision": "E002", "size-in-bytes": 16000900661248, "speed-in-rpm": 7200, "device-path": "/scsi_vhci/disk@g5000c500adc7a3db", "logical-disk": "c0t5000C500ADC7A3DBd0", "sensors": [ { "name": "temp", "type": "TEMP", "reading": 38, "units": "DEGREES_C" } ], "leds": [] } }, { "label": "Front Slot 5", "hc-fmri": "hc:///ses-enclosure=0/bay=5", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ], "disk": { "hc-fmri": "hc:///ses-enclosure=0/bay=5/disk=0", "manufacturer": "HGST", "model": "HUSMH8010BSS204", "serial-number": "0HWZGX6A", "firmware-revision": "C360", "size-in-bytes": 100030242816, "device-path": "/pci@7e,0/pci8086,2030@0/pci15d9,808@0/iport@ff/disk@w5000cca0496fca6d,0", "logical-disk": "c2t5000CCA0496FCA6Dd0", "sensors": [ { "name": "temp", "type": "TEMP", "reading": 32, "units": "DEGREES_C" } ], "leds": [] } }, { "label": "Front Slot 6", "hc-fmri": "hc:///ses-enclosure=0/bay=6", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ], "disk": { "hc-fmri": "hc:///ses-enclosure=0/bay=6/disk=0", "manufacturer": "SEAGATE", "model": "ST16000NM002G", "serial-number": "ZL2037540000C9350E9Y", "firmware-revision": "E002", "size-in-bytes": 16000900661248, "speed-in-rpm": 7200, "device-path": "/scsi_vhci/disk@g5000c500adc0e24b", "logical-disk": "c0t5000C500ADC0E24Bd0", "sensors": [ { "name": "temp", "type": "TEMP", "reading": 44, "units": "DEGREES_C" } ], "leds": [] } }, { "label": "Front Slot 7", "hc-fmri": "hc:///ses-enclosure=0/bay=7", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ], "disk": { "hc-fmri": "hc:///ses-enclosure=0/bay=7/disk=0", "manufacturer": "SEAGATE", "model": "ST16000NM002G", "serial-number": "ZL203D6T0000C9360MDH", "firmware-revision": "E002", "size-in-bytes": 16000900661248, "speed-in-rpm": 7200, "device-path": "/scsi_vhci/disk@g5000c500adc78617", "logical-disk": "c0t5000C500ADC78617d0", "sensors": [ { "name": "temp", "type": "TEMP", "reading": 47, "units": "DEGREES_C" } ], "leds": [] } }, { "label": "Front Slot 8", "hc-fmri": "hc:///ses-enclosure=0/bay=8", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ], "disk": { "hc-fmri": "hc:///ses-enclosure=0/bay=8/disk=0", "manufacturer": "SEAGATE", "model": "ST16000NM002G", "serial-number": "ZL203MEW0000C9350CNN", "firmware-revision": "E002", "size-in-bytes": 16000900661248, "speed-in-rpm": 7200, "device-path": "/scsi_vhci/disk@g5000c500adcc757f", "logical-disk": "c0t5000C500ADCC757Fd0", "sensors": [ { "name": "temp", "type": "TEMP", "reading": 46, "units": "DEGREES_C" } ], "leds": [] } }, { "label": "Front Slot 9", "hc-fmri": "hc:///ses-enclosure=0/bay=9", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ], "disk": { "hc-fmri": "hc:///ses-enclosure=0/bay=9/disk=0", "manufacturer": "SEAGATE", "model": "ST16000NM002G", "serial-number": "ZL203RKF0000C9360PWD", "firmware-revision": "E002", "size-in-bytes": 16000900661248, "speed-in-rpm": 7200, "device-path": "/scsi_vhci/disk@g5000c500adceed1f", "logical-disk": "c0t5000C500ADCEED1Fd0", "sensors": [ { "name": "temp", "type": "TEMP", "reading": 42, "units": "DEGREES_C" } ], "leds": [] } }, { "label": "Front Slot 10", "hc-fmri": "hc:///ses-enclosure=0/bay=10", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ], "disk": { "hc-fmri": "hc:///ses-enclosure=0/bay=10/disk=0", "manufacturer": "SEAGATE", "model": "ST16000NM002G", "serial-number": "ZL203D2V0000C9363V2B", "firmware-revision": "E002", "size-in-bytes": 16000900661248, "speed-in-rpm": 7200, "device-path": "/scsi_vhci/disk@g5000c500adc79e67", "logical-disk": "c0t5000C500ADC79E67d0", "sensors": [ { "name": "temp", "type": "TEMP", "reading": 39, "units": "DEGREES_C" } ], "leds": [] } }, { "label": "Front Slot 11", "hc-fmri": "hc:///ses-enclosure=0/bay=11", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ], "disk": { "hc-fmri": "hc:///ses-enclosure=0/bay=11/disk=0", "manufacturer": "SEAGATE", "model": "ST16000NM002G", "serial-number": "ZL203S5J0000C9360N8E", "firmware-revision": "E002", "size-in-bytes": 16000900661248, "speed-in-rpm": 7200, "device-path": "/scsi_vhci/disk@g5000c500adce5dbb", "logical-disk": "c0t5000C500ADCE5DBBd0", "sensors": [ { "name": "temp", "type": "TEMP", "reading": 33, "units": "DEGREES_C" } ], "leds": [] } }, { "label": "Front Slot 12", "hc-fmri": "hc:///ses-enclosure=0/bay=12", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ], "disk": { "hc-fmri": "hc:///ses-enclosure=0/bay=12/disk=0", "manufacturer": "SEAGATE", "model": "ST16000NM002G", "serial-number": "ZL203C5B0000C9360MKH", "firmware-revision": "E002", "size-in-bytes": 16000900661248, "speed-in-rpm": 7200, "device-path": "/scsi_vhci/disk@g5000c500adc7da4b", "logical-disk": "c0t5000C500ADC7DA4Bd0", "sensors": [ { "name": "temp", "type": "TEMP", "reading": 40, "units": "DEGREES_C" } ], "leds": [] } }, { "label": "Front Slot 13", "hc-fmri": "hc:///ses-enclosure=0/bay=13", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ], "disk": { "hc-fmri": "hc:///ses-enclosure=0/bay=13/disk=0", "manufacturer": "SEAGATE", "model": "ST16000NM002G", "serial-number": "ZL203S8B0000C9360QAR", "firmware-revision": "E002", "size-in-bytes": 16000900661248, "speed-in-rpm": 7200, "device-path": "/scsi_vhci/disk@g5000c500adce5677", "logical-disk": "c0t5000C500ADCE5677d0", "sensors": [ { "name": "temp", "type": "TEMP", "reading": 42, "units": "DEGREES_C" } ], "leds": [] } }, { "label": "Front Slot 14", "hc-fmri": "hc:///ses-enclosure=0/bay=14", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ], "disk": { "hc-fmri": "hc:///ses-enclosure=0/bay=14/disk=0", "manufacturer": "SEAGATE", "model": "ST16000NM002G", "serial-number": "ZL203KVQ0000C9363VKJ", "firmware-revision": "E002", "size-in-bytes": 16000900661248, "speed-in-rpm": 7200, "device-path": "/scsi_vhci/disk@g5000c500adc8f3bf", "logical-disk": "c0t5000C500ADC8F3BFd0", "sensors": [ { "name": "temp", "type": "TEMP", "reading": 42, "units": "DEGREES_C" } ], "leds": [] } }, { "label": "Front Slot 15", "hc-fmri": "hc:///ses-enclosure=0/bay=15", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ], "disk": { "hc-fmri": "hc:///ses-enclosure=0/bay=15/disk=0", "manufacturer": "SEAGATE", "model": "ST16000NM002G", "serial-number": "ZL203EWS0000C9360LML", "firmware-revision": "E002", "size-in-bytes": 16000900661248, "speed-in-rpm": 7200, "device-path": "/scsi_vhci/disk@g5000c500adc70b63", "logical-disk": "c0t5000C500ADC70B63d0", "sensors": [ { "name": "temp", "type": "TEMP", "reading": 38, "units": "DEGREES_C" } ], "leds": [] } }, { "label": "Front Slot 16", "hc-fmri": "hc:///ses-enclosure=0/bay=16", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ] }, { "label": "Front Slot 17", "hc-fmri": "hc:///ses-enclosure=0/bay=17", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ] }, { "label": "Front Slot 18", "hc-fmri": "hc:///ses-enclosure=0/bay=18", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ] }, { "label": "Front Slot 19", "hc-fmri": "hc:///ses-enclosure=0/bay=19", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ] }, { "label": "Front Slot 20", "hc-fmri": "hc:///ses-enclosure=0/bay=20", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ] }, { "label": "Front Slot 21", "hc-fmri": "hc:///ses-enclosure=0/bay=21", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ] }, { "label": "Front Slot 22", "hc-fmri": "hc:///ses-enclosure=0/bay=22", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ] }, { "label": "Front Slot 23", "hc-fmri": "hc:///ses-enclosure=0/bay=23", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ] }, { "label": "Rear Slot 0", "hc-fmri": "hc:///ses-enclosure=1/bay=0", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ] }, { "label": "Rear Slot 1", "hc-fmri": "hc:///ses-enclosure=1/bay=1", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ] }, { "label": "Rear Slot 2", "hc-fmri": "hc:///ses-enclosure=1/bay=2", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ] }, { "label": "Rear Slot 3", "hc-fmri": "hc:///ses-enclosure=1/bay=3", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "on" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ], "disk": { "hc-fmri": "hc:///ses-enclosure=1/bay=3/disk=0", "manufacturer": "SEAGATE", "model": "ST16000NM002G", "serial-number": "ZL203ABG0000C9350FA3", "firmware-revision": "E002", "size-in-bytes": 16000900661248, "speed-in-rpm": 7200, "device-path": "/scsi_vhci/disk@g5000c500adc04683", "logical-disk": "c0t5000C500ADC04683d0", "sensors": [ { "name": "temp", "type": "TEMP", "reading": 41, "units": "DEGREES_C" } ], "leds": [] } }, { "label": "Rear Slot 4", "hc-fmri": "hc:///ses-enclosure=1/bay=4", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ], "disk": { "hc-fmri": "hc:///ses-enclosure=1/bay=4/disk=0", "manufacturer": "SEAGATE", "model": "ST16000NM002G", "serial-number": "ZL203L7T0000C9360NT5", "firmware-revision": "E002", "size-in-bytes": 16000900661248, "speed-in-rpm": 7200, "device-path": "/scsi_vhci/disk@g5000c500adc8c8d3", "logical-disk": "c0t5000C500ADC8C8D3d0", "sensors": [ { "name": "temp", "type": "TEMP", "reading": 43, "units": "DEGREES_C" } ], "leds": [] } }, { "label": "Rear Slot 5", "hc-fmri": "hc:///ses-enclosure=1/bay=5", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ], "disk": { "hc-fmri": "hc:///ses-enclosure=1/bay=5/disk=0", "manufacturer": "SEAGATE", "model": "ST16000NM002G", "serial-number": "ZL203C610000C9360MQV", "firmware-revision": "E002", "size-in-bytes": 16000900661248, "speed-in-rpm": 7200, "device-path": "/scsi_vhci/disk@g5000c500adc7d7ab", "logical-disk": "c0t5000C500ADC7D7ABd0", "sensors": [ { "name": "temp", "type": "TEMP", "reading": 41, "units": "DEGREES_C" } ], "leds": [] } }, { "label": "Rear Slot 6", "hc-fmri": "hc:///ses-enclosure=1/bay=6", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "on" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ], "disk": { "hc-fmri": "hc:///ses-enclosure=1/bay=6/disk=0", "manufacturer": "SEAGATE", "model": "ST16000NM002G", "serial-number": "ZL203M530000C9350D54", "firmware-revision": "E002", "size-in-bytes": 16000900661248, "speed-in-rpm": 7200, "device-path": "/scsi_vhci/disk@g5000c500adcc907f", "logical-disk": "c0t5000C500ADCC907Fd0", "sensors": [ { "name": "temp", "type": "TEMP", "reading": 42, "units": "DEGREES_C" } ], "leds": [] } }, { "label": "Rear Slot 7", "hc-fmri": "hc:///ses-enclosure=1/bay=7", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ], "disk": { "hc-fmri": "hc:///ses-enclosure=1/bay=7/disk=0", "manufacturer": "SEAGATE", "model": "ST16000NM002G", "serial-number": "ZL2039AC0000C9360LXD", "firmware-revision": "E002", "size-in-bytes": 16000900661248, "speed-in-rpm": 7200, "device-path": "/scsi_vhci/disk@g5000c500adc0b5bf", "logical-disk": "c0t5000C500ADC0B5BFd0", "sensors": [ { "name": "temp", "type": "TEMP", "reading": 43, "units": "DEGREES_C" } ], "leds": [] } }, { "label": "Rear Slot 8", "hc-fmri": "hc:///ses-enclosure=1/bay=8", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ] }, { "label": "Rear Slot 9", "hc-fmri": "hc:///ses-enclosure=1/bay=9", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ] }, { "label": "Rear Slot 10", "hc-fmri": "hc:///ses-enclosure=1/bay=10", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ] }, { "label": "Rear Slot 11", "hc-fmri": "hc:///ses-enclosure=1/bay=11", "sensors": [ { "name": "fault", "type": "GENERIC_FAILURE", "state": 1, "state-description": "DEASSERTED" } ], "leds": [ { "type": "LOCATE", "mode": "off" }, { "type": "SERVICE", "mode": "off" }, { "type": "OK2RM", "mode": "off" } ] } ]
Updated by Electric Monk over 2 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 317c37f36c90aaecad34bee96f73586514294a7f
commit 317c37f36c90aaecad34bee96f73586514294a7f Author: Rob Johnston <rob.johnston@joyent.com> Date: 2020-01-09T01:18:04.000Z 12068 Fix ambiguous bay/disk labels on Joyent-S10G5 Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Garrett D'Amore <garrett@damore.org>