12068 Fix ambiguous bay/disk labels on Joyent-S10G5 Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Garrett D'Amore <garrett@damore.org>